used stronger stopwords

--- a/NLP with disaster tweets/disaster_tweets.ipynb
+++ b/NLP with disaster tweets/disaster_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -135,18 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
     "# remove urls, numbers, eveything except strings, alphanum,hashtags and spaces.\n",
     "\n",
-    "combined_dataset = [train_data,test_data]\n",
-    "\n",
+    "stopwords_json_en = set([\"a\",\"a's\",\"able\",\"about\",\"above\",\"according\",\"accordingly\",\"across\",\"actually\",\"after\",\"afterwards\",\"again\",\"against\",\"ain't\",\"all\",\"allow\",\"allows\",\"almost\",\"alone\",\"along\",\"already\",\"also\",\"although\",\"always\",\"am\",\"among\",\"amongst\",\"an\",\"and\",\"another\",\"any\",\"anybody\",\"anyhow\",\"anyone\",\"anything\",\"anyway\",\"anyways\",\"anywhere\",\"apart\",\"appear\",\"appreciate\",\"appropriate\",\"are\",\"aren't\",\"around\",\"as\",\"aside\",\"ask\",\"asking\",\"associated\",\"at\",\"available\",\"away\",\"awfully\",\"b\",\"be\",\"became\",\"because\",\"become\",\"becomes\",\"becoming\",\"been\",\"before\",\"beforehand\",\"behind\",\"being\",\"believe\",\"below\",\"beside\",\"besides\",\"best\",\"better\",\"between\",\"beyond\",\"both\",\"brief\",\"but\",\"by\",\"c\",\"c'mon\",\"c's\",\"came\",\"can\",\"can't\",\"cannot\",\"cant\",\"cause\",\"causes\",\"certain\",\"certainly\",\"changes\",\"clearly\",\"co\",\"com\",\"come\",\"comes\",\"concerning\",\"consequently\",\"consider\",\"considering\",\"contain\",\"containing\",\"contains\",\"corresponding\",\"could\",\"couldn't\",\"course\",\"currently\",\"d\",\"definitely\",\"described\",\"despite\",\"did\",\"didn't\",\"different\",\"do\",\"does\",\"doesn't\",\"doing\",\"don't\",\"done\",\"down\",\"downwards\",\"during\",\"e\",\"each\",\"edu\",\"eg\",\"eight\",\"either\",\"else\",\"elsewhere\",\"enough\",\"entirely\",\"especially\",\"et\",\"etc\",\"even\",\"ever\",\"every\",\"everybody\",\"everyone\",\"everything\",\"everywhere\",\"ex\",\"exactly\",\"example\",\"except\",\"f\",\"far\",\"few\",\"fifth\",\"first\",\"five\",\"followed\",\"following\",\"follows\",\"for\",\"former\",\"formerly\",\"forth\",\"four\",\"from\",\"further\",\"furthermore\",\"g\",\"get\",\"gets\",\"getting\",\"given\",\"gives\",\"go\",\"goes\",\"going\",\"gone\",\"got\",\"gotten\",\"greetings\",\"h\",\"had\",\"hadn't\",\"happens\",\"hardly\",\"has\",\"hasn't\",\"have\",\"haven't\",\"having\",\"he\",\"he's\",\"hello\",\"help\",\"hence\",\"her\",\"here\",\"here's\",\"hereafter\",\"hereby\",\"herein\",\"hereupon\",\"hers\",\"herself\",\"hi\",\"him\",\"himself\",\"his\",\"hither\",\"hopefully\",\"how\",\"howbeit\",\"however\",\"i\",\"i'd\",\"i'll\",\"i'm\",\"i've\",\"ie\",\"if\",\"ignored\",\"immediate\",\"in\",\"inasmuch\",\"inc\",\"indeed\",\"indicate\",\"indicated\",\"indicates\",\"inner\",\"insofar\",\"instead\",\"into\",\"inward\",\"is\",\"isn't\",\"it\",\"it'd\",\"it'll\",\"it's\",\"its\",\"itself\",\"j\",\"just\",\"k\",\"keep\",\"keeps\",\"kept\",\"know\",\"known\",\"knows\",\"l\",\"last\",\"lately\",\"later\",\"latter\",\"latterly\",\"least\",\"less\",\"lest\",\"let\",\"let's\",\"like\",\"liked\",\"likely\",\"little\",\"look\",\"looking\",\"looks\",\"ltd\",\"m\",\"mainly\",\"many\",\"may\",\"maybe\",\"me\",\"mean\",\"meanwhile\",\"merely\",\"might\",\"more\",\"moreover\",\"most\",\"mostly\",\"much\",\"must\",\"my\",\"myself\",\"n\",\"name\",\"namely\",\"nd\",\"near\",\"nearly\",\"necessary\",\"need\",\"needs\",\"neither\",\"never\",\"nevertheless\",\"new\",\"next\",\"nine\",\"no\",\"nobody\",\"non\",\"none\",\"noone\",\"nor\",\"normally\",\"not\",\"nothing\",\"novel\",\"now\",\"nowhere\",\"o\",\"obviously\",\"of\",\"off\",\"often\",\"oh\",\"ok\",\"okay\",\"old\",\"on\",\"once\",\"one\",\"ones\",\"only\",\"onto\",\"or\",\"other\",\"others\",\"otherwise\",\"ought\",\"our\",\"ours\",\"ourselves\",\"out\",\"outside\",\"over\",\"overall\",\"own\",\"p\",\"particular\",\"particularly\",\"per\",\"perhaps\",\"placed\",\"please\",\"plus\",\"possible\",\"presumably\",\"probably\",\"provides\",\"q\",\"que\",\"quite\",\"qv\",\"r\",\"rather\",\"rd\",\"re\",\"really\",\"reasonably\",\"regarding\",\"regardless\",\"regards\",\"relatively\",\"respectively\",\"right\",\"s\",\"said\",\"same\",\"saw\",\"say\",\"saying\",\"says\",\"second\",\"secondly\",\"see\",\"seeing\",\"seem\",\"seemed\",\"seeming\",\"seems\",\"seen\",\"self\",\"selves\",\"sensible\",\"sent\",\"serious\",\"seriously\",\"seven\",\"several\",\"shall\",\"she\",\"should\",\"shouldn't\",\"since\",\"six\",\"so\",\"some\",\"somebody\",\"somehow\",\"someone\",\"something\",\"sometime\",\"sometimes\",\"somewhat\",\"somewhere\",\"soon\",\"sorry\",\"specified\",\"specify\",\"specifying\",\"still\",\"sub\",\"such\",\"sup\",\"sure\",\"t\",\"t's\",\"take\",\"taken\",\"tell\",\"tends\",\"th\",\"than\",\"thank\",\"thanks\",\"thanx\",\"that\",\"that's\",\"thats\",\"the\",\"their\",\"theirs\",\"them\",\"themselves\",\"then\",\"thence\",\"there\",\"there's\",\"thereafter\",\"thereby\",\"therefore\",\"therein\",\"theres\",\"thereupon\",\"these\",\"they\",\"they'd\",\"they'll\",\"they're\",\"they've\",\"think\",\"third\",\"this\",\"thorough\",\"thoroughly\",\"those\",\"though\",\"three\",\"through\",\"throughout\",\"thru\",\"thus\",\"to\",\"together\",\"too\",\"took\",\"toward\",\"towards\",\"tried\",\"tries\",\"truly\",\"try\",\"trying\",\"twice\",\"two\",\"u\",\"un\",\"under\",\"unfortunately\",\"unless\",\"unlikely\",\"until\",\"unto\",\"up\",\"upon\",\"us\",\"use\",\"used\",\"useful\",\"uses\",\"using\",\"usually\",\"uucp\",\"v\",\"value\",\"various\",\"very\",\"via\",\"viz\",\"vs\",\"w\",\"want\",\"wants\",\"was\",\"wasn't\",\"way\",\"we\",\"we'd\",\"we'll\",\"we're\",\"we've\",\"welcome\",\"well\",\"went\",\"were\",\"weren't\",\"what\",\"what's\",\"whatever\",\"when\",\"whence\",\"whenever\",\"where\",\"where's\",\"whereafter\",\"whereas\",\"whereby\",\"wherein\",\"whereupon\",\"wherever\",\"whether\",\"which\",\"while\",\"whither\",\"who\",\"who's\",\"whoever\",\"whole\",\"whom\",\"whose\",\"why\",\"will\",\"willing\",\"wish\",\"with\",\"within\",\"without\",\"won't\",\"wonder\",\"would\",\"wouldn't\",\"x\",\"y\",\"yes\",\"yet\",\"you\",\"you'd\",\"you'll\",\"you're\",\"you've\",\"your\",\"yours\",\"yourself\",\"yourselves\",\"z\",\"zero\"])\n",
     "stopwords_en = set(stopwords.words('english'))\n",
     "punctuation_en = set(punctuation)\n",
-    "stopwords_punctuations_en = set(stopwords_en.union(punctuation_en))\n",
+    "stopwords_punctuations_en = set.union(stopwords_json_en,stopwords_en,punctuation_en)\n",
     "porter = PorterStemmer()\n",
+    "\n",
+    "combined_dataset = [train_data,test_data]\n",
     "\n",
     "for dataset in combined_dataset:\n",
     "\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -194,63 +195,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_913ab\">\n",
+       "<table id=\"T_f2b5b\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_913ab_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
-       "      <th id=\"T_913ab_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
-       "      <th id=\"T_913ab_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
-       "      <th id=\"T_913ab_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
-       "      <th id=\"T_913ab_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
+       "      <th id=\"T_f2b5b_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
+       "      <th id=\"T_f2b5b_level0_col1\" class=\"col_heading level0 col1\" >keyword</th>\n",
+       "      <th id=\"T_f2b5b_level0_col2\" class=\"col_heading level0 col2\" >location</th>\n",
+       "      <th id=\"T_f2b5b_level0_col3\" class=\"col_heading level0 col3\" >text</th>\n",
+       "      <th id=\"T_f2b5b_level0_col4\" class=\"col_heading level0 col4\" >target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_913ab_level0_row0\" class=\"row_heading level0 row0\" >2273</th>\n",
-       "      <td id=\"T_913ab_row0_col0\" class=\"data row0 col0\" >3260</td>\n",
-       "      <td id=\"T_913ab_row0_col1\" class=\"data row0 col1\" >demolish</td>\n",
-       "      <td id=\"T_913ab_row0_col2\" class=\"data row0 col2\" >State of Dreaming</td>\n",
-       "      <td id=\"T_913ab_row0_col3\" class=\"data row0 col3\" >four demolish</td>\n",
-       "      <td id=\"T_913ab_row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "      <th id=\"T_f2b5b_level0_row0\" class=\"row_heading level0 row0\" >5300</th>\n",
+       "      <td id=\"T_f2b5b_row0_col0\" class=\"data row0 col0\" >7570</td>\n",
+       "      <td id=\"T_f2b5b_row0_col1\" class=\"data row0 col1\" >outbreak</td>\n",
+       "      <td id=\"T_f2b5b_row0_col2\" class=\"data row0 col2\" >nan</td>\n",
+       "      <td id=\"T_f2b5b_row0_col3\" class=\"data row0 col3\" >famili sue legionnair famili affect fatal outbreak legionnair disea</td>\n",
+       "      <td id=\"T_f2b5b_row0_col4\" class=\"data row0 col4\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_913ab_level0_row1\" class=\"row_heading level0 row1\" >1486</th>\n",
-       "      <td id=\"T_913ab_row1_col0\" class=\"data row1 col0\" >2142</td>\n",
-       "      <td id=\"T_913ab_row1_col1\" class=\"data row1 col1\" >catastrophe</td>\n",
-       "      <td id=\"T_913ab_row1_col2\" class=\"data row1 col2\" >Lytham St Anne's </td>\n",
-       "      <td id=\"T_913ab_row1_col3\" class=\"data row1 col3\" >god that biggest gbbo catastroph ever seen watch show</td>\n",
-       "      <td id=\"T_913ab_row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "      <th id=\"T_f2b5b_level0_row1\" class=\"row_heading level0 row1\" >6490</th>\n",
+       "      <td id=\"T_f2b5b_row1_col0\" class=\"data row1 col0\" >9278</td>\n",
+       "      <td id=\"T_f2b5b_row1_col1\" class=\"data row1 col1\" >sunk</td>\n",
+       "      <td id=\"T_f2b5b_row1_col2\" class=\"data row1 col2\" >NYC</td>\n",
+       "      <td id=\"T_f2b5b_row1_col3\" class=\"data row1 col3\" >ltlt lip sunk bed arm cross head watch captain number bodi</td>\n",
+       "      <td id=\"T_f2b5b_row1_col4\" class=\"data row1 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_913ab_level0_row2\" class=\"row_heading level0 row2\" >5810</th>\n",
-       "      <td id=\"T_913ab_row2_col0\" class=\"data row2 col0\" >8292</td>\n",
-       "      <td id=\"T_913ab_row2_col1\" class=\"data row2 col1\" >rubble</td>\n",
-       "      <td id=\"T_913ab_row2_col2\" class=\"data row2 col2\" >Columbus, Georgia</td>\n",
-       "      <td id=\"T_913ab_row2_col3\" class=\"data row2 col3\" >refus let life reduc rubbl shit keep pile get shovel</td>\n",
-       "      <td id=\"T_913ab_row2_col4\" class=\"data row2 col4\" >0</td>\n",
+       "      <th id=\"T_f2b5b_level0_row2\" class=\"row_heading level0 row2\" >6775</th>\n",
+       "      <td id=\"T_f2b5b_row2_col0\" class=\"data row2 col0\" >9707</td>\n",
+       "      <td id=\"T_f2b5b_row2_col1\" class=\"data row2 col1\" >tornado</td>\n",
+       "      <td id=\"T_f2b5b_row2_col2\" class=\"data row2 col2\" >nan</td>\n",
+       "      <td id=\"T_f2b5b_row2_col3\" class=\"data row2 col3\" >pretti teen hayden ryan pose strip purpl top view download video</td>\n",
+       "      <td id=\"T_f2b5b_row2_col4\" class=\"data row2 col4\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_913ab_level0_row3\" class=\"row_heading level0 row3\" >2516</th>\n",
-       "      <td id=\"T_913ab_row3_col0\" class=\"data row3 col0\" >3613</td>\n",
-       "      <td id=\"T_913ab_row3_col1\" class=\"data row3 col1\" >desolation</td>\n",
-       "      <td id=\"T_913ab_row3_col2\" class=\"data row3 col2\" >nan</td>\n",
-       "      <td id=\"T_913ab_row3_col3\" class=\"data row3 col3\" >kurtkamka beauti desol coupl coyot lizard morn sun phoenix ariz</td>\n",
-       "      <td id=\"T_913ab_row3_col4\" class=\"data row3 col4\" >1</td>\n",
+       "      <th id=\"T_f2b5b_level0_row3\" class=\"row_heading level0 row3\" >5586</th>\n",
+       "      <td id=\"T_f2b5b_row3_col0\" class=\"data row3 col0\" >7971</td>\n",
+       "      <td id=\"T_f2b5b_row3_col1\" class=\"data row3 col1\" >razed</td>\n",
+       "      <td id=\"T_f2b5b_row3_col2\" class=\"data row3 col2\" >WorldWide</td>\n",
+       "      <td id=\"T_f2b5b_row3_col3\" class=\"data row3 col3\" >news latest home raze northern california wildfir york time taf</td>\n",
+       "      <td id=\"T_f2b5b_row3_col4\" class=\"data row3 col4\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_913ab_level0_row4\" class=\"row_heading level0 row4\" >6260</th>\n",
-       "      <td id=\"T_913ab_row4_col0\" class=\"data row4 col0\" >8945</td>\n",
-       "      <td id=\"T_913ab_row4_col1\" class=\"data row4 col1\" >storm</td>\n",
-       "      <td id=\"T_913ab_row4_col2\" class=\"data row4 col2\" >State College, Pa</td>\n",
-       "      <td id=\"T_913ab_row4_col3\" class=\"data row4 col3\" >typhoon soudelor captur incred nasa photo way taiwan</td>\n",
-       "      <td id=\"T_913ab_row4_col4\" class=\"data row4 col4\" >1</td>\n",
+       "      <th id=\"T_f2b5b_level0_row4\" class=\"row_heading level0 row4\" >1269</th>\n",
+       "      <td id=\"T_f2b5b_row4_col0\" class=\"data row4 col0\" >1831</td>\n",
+       "      <td id=\"T_f2b5b_row4_col1\" class=\"data row4 col1\" >burned</td>\n",
+       "      <td id=\"T_f2b5b_row4_col2\" class=\"data row4 col2\" >Erie, PA</td>\n",
+       "      <td id=\"T_f2b5b_row4_col3\" class=\"data row4 col3\" >dont burn</td>\n",
+       "      <td id=\"T_f2b5b_row4_col4\" class=\"data row4 col4\" >0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x190ee0820a0>"
+       "<pandas.io.formats.style.Styler at 0x19082d99730>"
       ]
      },
      "metadata": {},
@@ -261,7 +262,7 @@
      "output_type": "stream",
      "text": [
       "object\n",
-      "11504\n"
+      "11328\n"
      ]
     }
    ],
@@ -273,7 +274,7 @@
     "\n",
     "print(len(bow.get_feature_names_out())) \n",
     "# before preprocessing: 21637 features\n",
-    "# after preprocessing: 11504 features"
+    "# after preprocessing: 11328 features"
    ]
   },
   {
@@ -289,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multinomial NB classifier accuracy: 81.0%\n"
+      "Multinomial NB classifier accuracy: 80.0%\n"
      ]
     }
    ],
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,9 @@
     "* After preprocssing: 0.79221\n",
     "\n",
     "Observations:  \n",
-    "* Preprocessing did not help much. maybe try different vectorization technique, stronger stopwords, NN model.\n"
+    "* Preprocessing did not help much. maybe try different vectorization technique, NN model.\n",
+    "* Using stronger stopwords brought down acc by 0.8%\n",
+    "* Using TFIDF over BOW did not change the score.\n"
    ]
   }
  ],
