--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,17 @@
       "dtype: object\n",
       "id        object\n",
       "review    object\n",
-      "dtype: object\n"
+      "dtype: object\n",
+      "id           0\n",
+      "sentiment    0\n",
+      "review       0\n",
+      "dtype: int64\n",
+      "id        0\n",
+      "review    0\n",
+      "dtype: int64\n",
+      "id        0\n",
+      "review    0\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -38,7 +48,10 @@
     "unlabeled_train_data_og = pd.read_csv('./unlabeledTrainData.tsv', sep='\\t')\n",
     "print(labeled_train_data_og.dtypes)\n",
     "print(test_data_og.dtypes)\n",
-    "print(unlabeled_train_data_og.dtypes)"
+    "print(unlabeled_train_data_og.dtypes)\n",
+    "print(labeled_train_data_og.isnull().sum())\n",
+    "print(test_data_og.isnull().sum())\n",
+    "print(unlabeled_train_data_og.isnull().sum())"
    ]
   }
  ],
