--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,13 @@
      "text": [
       "id           object\n",
       "sentiment     int64\n",
-      "review       object\n",
+      "review       string\n",
       "dtype: object\n",
       "id        object\n",
-      "review    object\n",
+      "review    string\n",
       "dtype: object\n",
       "id        object\n",
-      "review    object\n",
+      "review    string\n",
       "dtype: object\n",
       "id           0\n",
       "sentiment    0\n",
@@ -46,6 +46,9 @@
     "labeled_train_data_og = pd.read_csv('./labeledTrainData.tsv', sep='\\t')\n",
     "test_data_og = pd.read_csv('./testData.tsv', sep='\\t')\n",
     "unlabeled_train_data_og = pd.read_csv('./unlabeledTrainData.tsv', sep='\\t')\n",
+    "labeled_train_data_og['review'] = labeled_train_data_og['review'].astype('string')\n",
+    "test_data_og['review'] = test_data_og['review'].astype('string')\n",
+    "unlabeled_train_data_og['review'] = unlabeled_train_data_og['review'].astype('string')\n",
     "print(labeled_train_data_og.dtypes)\n",
     "print(test_data_og.dtypes)\n",
     "print(unlabeled_train_data_og.dtypes)\n",
