removed stopwords and tokenized

--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
     "\n",
     "# vizualization\n",
     "import seaborn as sns\n",
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +97,7 @@
        "<AxesSubplot: xlabel='sentiment', ylabel='count'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,54 +135,21 @@
     "# Feature Engineering:\n",
     "* (DONE) Needs lowercasing.\n",
     "* (DONE) Remove URLs, numbers.\n",
-    "* Remove stopwords?\n",
+    "* Remove stopwords? needs tokenization\n",
     "* Perform Stemming.\n",
     "* Perform Tokenization. Need to keep "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_a282e\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a282e_level0_col0\" class=\"col_heading level0 col0\" >id</th>\n",
-       "      <th id=\"T_a282e_level0_col1\" class=\"col_heading level0 col1\" >sentiment</th>\n",
-       "      <th id=\"T_a282e_level0_col2\" class=\"col_heading level0 col2\" >review</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_a282e_level0_row0\" class=\"row_heading level0 row0\" >21162</th>\n",
-       "      <td id=\"T_a282e_row0_col0\" class=\"data row0 col0\" >7552_10</td>\n",
-       "      <td id=\"T_a282e_row0_col1\" class=\"data row0 col1\" >1</td>\n",
-       "      <td id=\"T_a282e_row0_col2\" class=\"data row0 col2\" >CAT SOUP is a short anime based on the legendary manga Nekojiru. It won the award \\Best Short Film\\\" at The 6th Fantasia Film Festival and also won the \\\"Excellence Prize\\\" at Japan's Media Arts Festival.<br /><br />When little kitten Nyaako's soul is stolen by Death, she and her brother Nyatta embark on a bizarre journey to get it back. In the surreal dreamscape of the Other Side, they encounter many fantastic characters and remarkable, often disturbing adventures.<br /><br />CAT SOUP is an anime like nothing you've ever seen. It's Hello Kitty on acid! It is very original, stunningly beautiful and possess a great sense of strangeness and lyricism. CAT SOUP is very surrealistic (there are no dialogue) and sometimes cruel and gory. So it is more an anime for adults than children (they may not understand at all!). A great journey for those who get the chance to see this absolute masterpiece. An must-see!\"</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1ff4910ceb0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A Compelling Thriller!!, 10 December 2005 Author:littlehammer16787 from United States<br /><br />Just Cause<br /><br />Starring:Sean Connery,Laurence Fishburne, and Blair Underwood.<br /><br />A liberal,though good-hearted Harvard law professor Paul Armstrong is convoked to the Flordia Everglades by unjustly convicted black guy Bobby Earl.Confessing that sadistic,cold-hearted cops vilifyied and beat him to a pulp to get the confession of a gruesome murder of an eleven year old girl. As he digs further and further into the mysterious case he realizes that Bobby Earl is a victim of discrimination.That the black police detective Lt.Tanny Brown of the small community is corrupt and villainously mean. When the infamous,psychotic serial killer Blair Sullivan is introduced.He discovers that he knows the location of the murder weapon that butchered the little girl.When Armstrong finds that there are lucid coincidences of Sullivan's road trip through the small town and the letter he personally wrote. Bobby Earl gets a re-trial.Is unfettered from prison and eludes his horrific punishment. All seems swimmingly well until an unexpected phone call from serial killer Sullivan comes into focus.Armstrong discovers a lurid double killing which happens to be Sullivan's parents.Whom he immensely detests.Sullivan divulges to Armstrong the truth of Joanie Shriver's heinous murder and why he was brought here.It turns out that Bobby Earl is a psychopathic murderer and he really did rape and kill Joanie Shriver.He just merely struck a bargain with fiendish psycho Sullivan. To get loose so he could kill again for revenge.Upon Armstrong's beautiful wife and daughter.Now Sullivan is executed to his death. Armstrong and tough good guy Brown chase the malevolent villain to the Everglades in order to thwart him.When they arrive Armstrong learns that the psychotic sicko Bobby Earl plans to kill his wife and daughter for a former rape trial that inevitably made him endure agonizing pain and castration.But good,virtuous cop Brown emerges and thwarts the brutal baddie.Is stabbed and eaten by ruthless,man-eating alligators.Paul Armstrong,Tanny Brown,his wife,and daughter survive and live happily ever after. A good thriller that works.Delivers both mystery and subterfuge.How reluctant blacks are hazed by racist lawmen.Sentenced to unfair penalties.Even though sometimes the wrongfully convicted innocent, friendly black man may in truth be the vicious baddie. Sean Connery is great as the oblivious,holier than thou hero.Laurence Fishburne is watchably amazing as the mean,arrogant,but good guy cop. Underwood and Harris are over the top and invigorating as the malevolent psychos.Capeshaw is okay.Ruby Dee is great as the tenacious grandmother.The rest of the cast is wonderful as well.\n",
-      "\n",
-      " a compelling thriller!!,  december  author:littlehammer from united states<br /><br />just cause<br /><br />starring:sean connery,laurence fishburne, and blair underwood.<br /><br />a liberal,though good-hearted harvard law professor paul armstrong is convoked to the flordia everglades by unjustly convicted black guy bobby earl.confessing that sadistic,cold-hearted cops vilifyied and beat him to a pulp to get the confession of a gruesome murder of an eleven year old girl. as he digs further and further into the mysterious case he realizes that bobby earl is a victim of discrimination.that the black police detective lt.tanny brown of the small community is corrupt and villainously mean. when the infamous,psychotic serial killer blair sullivan is introduced.he discovers that he knows the location of the murder weapon that butchered the little girl.when armstrong finds that there are lucid coincidences of sullivan's road trip through the small town and the letter he personally wrote. bobby earl gets a re-trial.is unfettered from prison and eludes his horrific punishment. all seems swimmingly well until an unexpected phone call from serial killer sullivan comes into focus.armstrong discovers a lurid double killing which happens to be sullivan's parents.whom he immensely detests.sullivan divulges to armstrong the truth of joanie shriver's heinous murder and why he was brought here.it turns out that bobby earl is a psychopathic murderer and he really did rape and kill joanie shriver.he just merely struck a bargain with fiendish psycho sullivan. to get loose so he could kill again for revenge.upon armstrong's beautiful wife and daughter.now sullivan is executed to his death. armstrong and tough good guy brown chase the malevolent villain to the everglades in order to thwart him.when they arrive armstrong learns that the psychotic sicko bobby earl plans to kill his wife and daughter for a former rape trial that inevitably made him endure agonizing pain and castration.but good,virtuous cop brown emerges and thwarts the brutal baddie.is stabbed and eaten by ruthless,man-eating alligators.paul armstrong,tanny brown,his wife,and daughter survive and live happily ever after. a good thriller that works.delivers both mystery and subterfuge.how reluctant blacks are hazed by racist lawmen.sentenced to unfair penalties.even though sometimes the wrongfully convicted innocent, friendly black man may in truth be the vicious baddie. sean connery is great as the oblivious,holier than thou hero.laurence fishburne is watchably amazing as the mean,arrogant,but good guy cop. underwood and harris are over the top and invigorating as the malevolent psychos.capeshaw is okay.ruby dee is great as the tenacious grandmother.the rest of the cast is wonderful as well.\n"
+      "A Compelling Thriller!!, 10 December 2005 Author:littlehammer16787 from United States<br /><br />Just Cause<br /><br />Starring:Sean Connery,Laurence Fishburne, and Blair Underwood.<br /><br />A liberal,though good-hearted Harvard law professor Paul Armstrong is convoked to the Flordia Everglades by unjustly convicted black guy Bobby Earl.Confessing that sadistic,cold-hearted cops vilifyied and beat him to a pulp to get the confession of a gruesome murder of an eleven year old girl. As he digs further and further into the mysterious case he realizes that Bobby Earl is a victim of discrimination.That the black police detective Lt.Tanny Brown of the small community is corrupt and villainously mean. When the infamous,psychotic serial killer Blair Sullivan is introduced.He discovers that he knows the location of the murder weapon that butchered the little girl.When Armstrong finds that there are lucid coincidences of Sullivan's road trip through the small town and the letter he personally wrote. Bobby Earl gets a re-trial.Is unfettered from prison and eludes his horrific punishment. All seems swimmingly well until an unexpected phone call from serial killer Sullivan comes into focus.Armstrong discovers a lurid double killing which happens to be Sullivan's parents.Whom he immensely detests.Sullivan divulges to Armstrong the truth of Joanie Shriver's heinous murder and why he was brought here.It turns out that Bobby Earl is a psychopathic murderer and he really did rape and kill Joanie Shriver.He just merely struck a bargain with fiendish psycho Sullivan. To get loose so he could kill again for revenge.Upon Armstrong's beautiful wife and daughter.Now Sullivan is executed to his death. Armstrong and tough good guy Brown chase the malevolent villain to the Everglades in order to thwart him.When they arrive Armstrong learns that the psychotic sicko Bobby Earl plans to kill his wife and daughter for a former rape trial that inevitably made him endure agonizing pain and castration.But good,virtuous cop Brown emerges and thwarts the brutal baddie.Is stabbed and eaten by ruthless,man-eating alligators.Paul Armstrong,Tanny Brown,his wife,and daughter survive and live happily ever after. A good thriller that works.Delivers both mystery and subterfuge.How reluctant blacks are hazed by racist lawmen.Sentenced to unfair penalties.Even though sometimes the wrongfully convicted innocent, friendly black man may in truth be the vicious baddie. Sean Connery is great as the oblivious,holier than thou hero.Laurence Fishburne is watchably amazing as the mean,arrogant,but good guy cop. Underwood and Harris are over the top and invigorating as the malevolent psychos.Capeshaw is okay.Ruby Dee is great as the tenacious grandmother.The rest of the cast is wonderful as well.\n"
      ]
     }
    ],
@@ -191,14 +162,16 @@
     "# test_data['review'] = test_data['review'].lower()\n",
     "# unlabeled_train_data['review'] = unlabeled_train_data['review'].lower()\n",
     "\n",
+    "stopwords_en = set(stopwords.words('english'))\n",
     "\n",
     "combined_dataset = [labeled_train_data,test_data,unlabeled_train_data]\n",
     "print(labeled_train_data.loc[20882,'review'])\n",
     "for dataset in combined_dataset:\n",
     "\n",
-    "    dataset['review'] = dataset['review'].str.lower()\n",
     "    dataset['review'] = dataset['review'].astype('string')\n",
+    "    dataset['review'] = dataset['review'].str.lower().apply(word_tokenize)\n",
     "    dataset.replace(to_replace={'review':{r'http\\S+':'',r'[0-9]+':''}}, regex=True, inplace=True)\n",
+    "    dataset['review'] = dataset['review'].apply(lambda x: ''.join([word for word in x if word not in stopwords_en]))\n",
     "\n",
     "\n",
     "print('\\n',labeled_train_data.loc[20882,'review'])"
