--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import PorterStemmer\n",
+    "from gensim.models import word2vec\n",
     "\n",
     "\n",
     "# vizualization\n",
@@ -187,7 +188,52 @@
    "metadata": {},
    "source": [
     "## Observations:\n",
-    "* (DONE) word_tokenizer splits \"<\\br />\" tags and other special chars like \"!!\". So maybe find a better tokenizer or remove special chars."
+    "* (DONE) word_tokenizer splits \"<\\br />\" tags and other special chars like \"!!\". So maybe find a better tokenizer or remove special chars.\n",
+    "* Vectorization would need:\n",
+    "    * punctuation removal\n",
+    "    * sentence tokenization instead of word tokenization. Punkt tokenizer maybe?\n",
+    "    * list of sentences having list of words. So, list of list."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vectorization\n",
+    "* Word2Vec: Continuous Bag of Words\n",
+    "* Word2Vec: SkipGram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cbow \u001b[39m=\u001b[39m word2vec(labeled_train_data[\u001b[39m'\u001b[39;49m\u001b[39mreview\u001b[39;49m\u001b[39m'\u001b[39;49m], min_count \u001b[39m=\u001b[39;49m \u001b[39m1\u001b[39;49m, size \u001b[39m=\u001b[39;49m \u001b[39m100\u001b[39;49m, window \u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m, sg \u001b[39m=\u001b[39;49m \u001b[39m0\u001b[39;49m)\n\u001b[0;32m      2\u001b[0m cbow\u001b[39m.\u001b[39msave(\u001b[39m\"\u001b[39m\u001b[39mword2vec_cbow.model\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "cbow = word2vec(labeled_train_data['review'], min_count = 1, size = 100, window = 10, sg = 0)\n",
+    "cbow.save(\"word2vec_cbow.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cbow.wv.similarity('murder','gruesom')"
    ]
   }
  ],
