edited observations and added TODO

--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -141,7 +141,7 @@
     "* (DONE) Remove stopwords. \n",
     "* (DONE) Remove punctuations.\n",
     "* Perform Sentence and word tokenization. OR\n",
-    "* Perform word tokenization.\n",
+    "* (DONE) Perform word tokenization.\n",
     "* (DONE) Perform Stemming.\n",
     "* (DONE) Perform Tokenization. "
    ]
@@ -196,9 +196,8 @@
     "## Observations:\n",
     "* (DONE) word_tokenizer splits \"<\\br />\" tags and other special chars like \"!!\". So maybe find a better tokenizer or remove special chars.\n",
     "* Vectorization would need:\n",
-    "    * punctuation removal\n",
-    "    * sentence tokenization instead of word tokenization. Punkt tokenizer maybe?\n",
-    "    * list of sentences having list of words. So, list of list.\n",
+    "    * (DONE) punctuation removal\n",
+    "    * sentence tokenization instead of word tokenization. Punkt tokenizer maybe? list of sentences having list of words. So, list of list.\n",
     "    * give it a proper size for our vocabulary. Also set the size equal to the size of the longest sentence."
    ]
   },
@@ -242,7 +241,18 @@
    ],
    "source": [
     "print(cbow.wv.most_similar('murder', topn=3))\n",
-    "print(cbow.wv.similarity('murder','gruesom'))"
+    "print(cbow.wv.similarity('murder','gruesom'))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO:\n",
+    "* Do polarity classification\n",
+    "* Check the Size of longest review, this size will be our size of all the vectors.\n",
+    "* Use RFclassifier or LSTM or LDA."
    ]
   }
  ],
