implemented BOW with MultinomialNB for benchmarking

--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -200,7 +200,8 @@
     "* Vectorization would need:\n",
     "    * (DONE) punctuation removal\n",
     "    * sentence tokenization instead of word tokenization. Punkt tokenizer maybe? list of sentences having list of words. So, list of list.\n",
-    "    * give it a proper size for our vocabulary. Also set the size equal to the size of the longest sentence.\n",
+    "    * give it a proper size for our vocabulary. Also set the size equal to the size of the longest sentence.  \n",
+    "    * Use the unlabeled_train_data to train the word2vec so it improves its dictionary. source: http://ai.stanford.edu/~ang/papers/acl11-WordVectorsSentimentAnalysis.pdf\n",
     "\n",
     "    "
    ]
