--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -306,18 +306,8 @@
      "output_type": "stream",
      "text": [
       "[('crime', 0.6809863448143005), ('investig', 0.652167797088623), ('victim', 0.6430747509002686)]\n",
-      "0.4260052\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(cbow\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mmost_similar(\u001b[39m'\u001b[39m\u001b[39mmurder\u001b[39m\u001b[39m'\u001b[39m, topn\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m))\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(cbow\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39msimilarity(\u001b[39m'\u001b[39m\u001b[39mmurder\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mgruesom\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      5\u001b[0m labeled_train_data_cbow_features \u001b[39m=\u001b[39m labeled_train_data[\u001b[39m'\u001b[39m\u001b[39mreview\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply( \n\u001b[1;32m----> 6\u001b[0m                 np\u001b[39m.\u001b[39mmean(cbow\u001b[39m.\u001b[39mwv[word_in_vocab]) \u001b[39mfor\u001b[39;00m word_in_vocab \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(\u001b[39mfilter\u001b[39m(\u001b[39mlambda\u001b[39;00m y: y \u001b[39min\u001b[39;00m cbow\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvocab,[\u001b[39mlambda\u001b[39;00m x: word \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m x]))\n\u001b[0;32m      7\u001b[0m                 ) \n\u001b[0;32m      8\u001b[0m                 \u001b[39m#BUG: some words are not in vocab, either catch the exception or filter words. \u001b[39;00m\n\u001b[0;32m      9\u001b[0m test_features_cbow_features \u001b[39m=\u001b[39m test_data[\u001b[39m'\u001b[39m\u001b[39mreview\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: [np\u001b[39m.\u001b[39mmean(cbow\u001b[39m.\u001b[39mwv[word]) \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m x])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+      "0.4260052\n",
+      "[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n"
      ]
     }
    ],
@@ -326,12 +316,18 @@
     "print(cbow.wv.most_similar('murder', topn=3))\n",
     "print(cbow.wv.similarity('murder','gruesom'))\n",
     "\n",
-    "labeled_train_data_cbow_features = labeled_train_data['review'].apply( \n",
-    "                np.mean(cbow.wv[word_in_vocab]) for word_in_vocab in list(filter(lambda y: y in cbow.wv.vocab,[lambda x: word for word in x]))\n",
-    "                ) \n",
+    "def vec2scalar(word):\n",
+    "\n",
+    "    try: \n",
+    "        word in cbow.wv.vocab\n",
+    "        return cbow.wv[word]\n",
+    "    except:\n",
+    "        return np.nan\n",
+    "\n",
+    "labeled_train_data_cbow_features = labeled_train_data['review'].apply(lambda x: [vec2scalar(word) for word in x]) \n",
     "                #BUG: some words are not in vocab, either catch the exception or filter words. \n",
-    "test_features_cbow_features = test_data['review'].apply(lambda x: [np.mean(cbow.wv[word]) for word in x])\n",
-    "print(labeled_train_data_cbow_features.head())\n",
+    "test_features_cbow_features = test_data['review'].apply(lambda x: [vec2scalar(word) for word in x])\n",
+    "print(labeled_train_data_cbow_features.loc[2])\n",
     "\n",
     "# mnb_cbow = MultinomialNB()\n",
     "# mnb_cbow.fit(labeld_unlabeled_train_features,labeled_train_data['sentiment'])\n",
