--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -342,10 +342,10 @@
     "\n",
     "cbow = Word2Vec(train_data_cbow['review'], min_count = 5,  window = 10, sg = 0)\n",
     "\n",
-    "cbow.build_vocab(train_data_cbow['review'], progress_per = 1000)\n",
-    "cbow.train(train_data_cbow['review'], total_examples=cbow.corpus_count, epochs = cbow.epochs)\n",
+    "# cbow.build_vocab(train_data_cbow['review'], progress_per = 1000)\n",
+    "# cbow.train(train_data_cbow['review'], total_examples=cbow.corpus_count, epochs = cbow.epochs)\n",
     "\n",
-    "cbow.save(\"./word2vec_cbow.model\")"
+    "# cbow.save(\"./word2vec_cbow.model\")"
    ]
   },
   {
